fix margins and alignment of sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,19 +8,28 @@ html {
     box-sizing: inherit;
 }
 
+aside {
+    width: 240px;
+}
+
 img {
     vertical-align: middle;
     border-style: none;
     height: 200px;
     width: 200px;
     border-radius: 50%;
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
 }
 
 ul {
     list-style: none;
 }
 
-body {
+body {  
     padding: 50px;
     margin: 0;
 }
@@ -33,7 +42,6 @@ span {
 p {
     margin-top: 0;
     margin-bottom: 1rem;
-    width: 25%;
     font-size: 15px;
 }
 
